; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_cmp_ctx_test.c_X509_STORE_new_1.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_cmp_ctx_test.c_X509_STORE_new_1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* ()* @X509_STORE_new_1 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @X509_STORE_new_1() #0 {
  %1 = alloca i32*, align 8
  %2 = call i32* (...) @X509_STORE_new()
  store i32* %2, i32** %1, align 8
  %3 = load i32*, i32** %1, align 8
  %4 = icmp ne i32* %3, null
  br i1 %4, label %5, label %9

5:                                                ; preds = %0
  %6 = load i32*, i32** %1, align 8
  %7 = call i32 @X509_STORE_get0_param(i32* %6)
  %8 = call i32 @X509_VERIFY_PARAM_set_flags(i32 %7, i32 1)
  br label %9

9:                                                ; preds = %5, %0
  %10 = load i32*, i32** %1, align 8
  ret i32* %10
}

declare dso_local i32* @X509_STORE_new(...) #1

declare dso_local i32 @X509_VERIFY_PARAM_set_flags(i32, i32) #1

declare dso_local i32 @X509_STORE_get0_param(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
